2006-03-12  Alexis Sukrieh  <sukria@backup-manager.org>

	* Makefile:
	  + Stop rebuilding the backup-manager-upload.8 manpage ever and ever. If
	  it exists, don't rebuild it.
	* VERSION:
	  + Ready for the release 0.7.2
	* backup-manager:
	  + VERSION = 0.7.2

2006-03-11  Alexis Sukrieh  <sukria@backup-manager.org>

	* lib/actions.sh:
	  + make_archives() now chown/chmod the md5 file to
	  $BM_REPOSITORY_USER/$BM_REPOSITORY_USER.
	* lib/backup-methods.sh:
	  + minor fixes/typo
	* lib/files.sh:
	  + some formatting.

2006-03-10  Alexis Sukrieh  <sukria@backup-manager.org>

	* Setup an umask 0077 for creating files without world permissions.
	  (closes: #47)
	* Restore the original umask when exiting.

2006-03-10  Alexis Sukrieh	<sukria@backup-manager.org>

	* backup-manager:
	  + Disabled the -u flag, too much problems with the pipe method.
	* lib/backup-methods.sh:
	  + Better layout of the __exec_meta_command.
	  + Doesn't try to commit an archive if none.

2006-03-09  Alexis Sukrieh	<sukria@backup-manager.org>

	* backup-manager.conf.tpl:
	  + speak about the DVD-RW burning method (with formating).
	  + speak about the DVD method (without formating).
	* doc/common.ent:
	  + New version of backup-manager: 0.7.2
	* doc/user-guide.sgml:
	  + Updates about the burning system.
	  + Interactive mode
	  + DVD / DVD-RW methods
	  + --burn <DATE> new option
	* doc/version.ent:
	  + Revision 1.2
	* lib/burning-methods.sh:
	  + Split the burning method DVD into DVD and DVD-RW so we now have 
	    a burning method that doesn't blank the medium before writing data..

2006-03-09  Rached Ben Mustapha  <rached@benmur.net>

	* lib/upload-methods.sh:
	  + Added support for the ServerAliveInterval ssh option. It is
	  unconditional for now, but we should check if all supported version
	  of ssh support it. This helps when the "building file list" step of
	  rsync takes a loooong time (high I/O load for example), and the